--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "unsplash/unsplash",
+  "name": "flotiq/unsplash",
   "description": "Wrapper to access the Unsplash API and photo library",
   "minimum-stability": "stable",
   "license": "MIT",
